--- a/index.html
+++ b/index.html
@@ -27,16 +27,8 @@
 
 <body>
     <main id="container">
-        <div>
-            <p id="credits">Made by <a href="https://www.behance.net/skriftstudio" target="_blank">Eigil
-                    Nikolajsen</a>. Code on <a href="https://github.com/eigilnikolajsen/4is10-solver"
-                    target="_blank">GitHub</a>.</p>
-            <h1 id="name">4=10 solver – all solutions</h1>
-        </div>
-
         <h2 id="title">5+5+5-5=10</h2>
 
-        <!-- NEW: ResultSearch input -->
         <div id="resultsearch-wrapper">
             <label for="resultSearch">Result:</label>
             <input type="number" id="resultSearch" value="10" step="1" />
@@ -48,8 +40,8 @@
                 <div id="number_wrapper"></div>
                 <div class="overlay" id="overlay_bottom"></div>
                 <div id="operation_wrapper">
-                    <span data-content="(">(</span><span data-content="+">+</span><span data-content="-">–</span><span
-                        data-content="*">×</span><span data-content="/">÷</span><span data-content="(">)</span>
+                    <span data-content="(">(</span><span data-content="+">+</span><span data-content="-">-</span><span
+                        data-content="*">x</span><span data-content="/">÷</span><span data-content="(">)</span>
                 </div>
             </div>
             <button type="submit" id="button">solve</button>
