--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <div id="number_wrapper"></div>
                 <div class="overlay" id="overlay_bottom"></div>
                 <div id="operation_wrapper">
-                    <span data-content="(">(</span><span data-content="+">+</span><span data-content="-">-</span><span
-                        data-content="*">x</span><span data-content="/">÷</span><span data-content="(">)</span>
+                    <span data-content="(">(</span><span data-content="+">+</span><span data-content="-">–</span><span
+                        data-content="*">×</span><span data-content="/">÷</span><span data-content="(">)</span>
                 </div>
             </div>
             <button type="submit" id="button">solve</button>
